CSS: 1 - Percebi que tinha algo "bloqueando" os itens do meio. Olhei pelo DevTools e vi que era um tal de "#default-poster". Vi o estilo (CSS) do mesmo e vi que ele estava com a propriedade "position: absolute", assim bloqueando todos os elementos abaixo dele. Por isso, resolvi colocar um "z-index: -2" nele para ver se isso resolve. Acho que esse tal de "default-poster" deve ser algum elemento do 3D, pois está dentro da Div "iframeCont".

--- a/style/style.css
+++ b/style/style.css
@@ -510,6 +510,10 @@ main .pieceWindow .apresentation .iframeCont .model3D {
     border-radius: 12px;
 }
 
+main .pieceWindow .apresentation .iframeCont #default-poster {
+    z-index: -2;
+}
+
 main .pieceWindow .apresentation .informationContainer {
     width: 100%;
     max-width: 800px;
